# ai-character-sdk

./: .gitignore  CHARTER.md  LICENSE  README.md  pyproject.toml
examples/: __init__.py  finn_the_paladin.py  party_example.py  quickstart.py
src/ai_character_sdk/: __init__.py
src/ai_character_sdk/core/: __init__.py  character.py  factory.py  presets.py
src/ai_character_sdk/decision/: __init__.py  engine.py
src/ai_character_sdk/learning/: __init__.py  outcomes.py
src/ai_character_sdk/memory/: __init__.py  hierarchical.py
src/ai_character_sdk/personality/: __init__.py  traits.py
tests/: __init__.py  test_character.py
